# optparse

./: README.md
examples/: demo.c
src/: CMakeLists.txt  optparse.c  optparse.h
src/include/: optparse.h
