cmake_minimum_required(VERSION 3.27)
project(optparse)
set(CMAKE_C_FLAGS "-Wall -Wextra -pedantic")
set(CMAKE_C_FLAGS_DEBUG "-g3 -Og -fsanitize=address,leak,undefined")
foreach(file include/optparse.h optparse.c)
        list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/${file}")
endforeach()
add_library(optparse ${SOURCES})
target_include_directories(optparse PUBLIC include)
