cmake_minimum_required(VERSION 3.27)
project(optparse)
set(CMAKE_C_FLAGS "-Wall -Wextra -pedantic")
set(CMAKE_C_FLAGS_DEBUG "-g3 -Og -fsanitize=address,leak,undefined")
foreach(file include/optparse.h optparse.c)
        list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/${file}")
endforeach()
message(${SOURCES})
option(BUILD_EXAMPLES "Whether or not to build examples")
add_library(optparse ${SOURCES})
target_include_directories(optparse PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
if (BUILD_EXAMPLES)
        add_executable(optparse-demo "${CMAKE_CURRENT_SOURCE_DIR}/../examples/demo.c")
        target_include_directories(optparse-demo PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include")
        target_link_libraries(optparse-demo optparse)
endif()
